k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: st2sco
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/maximeboulle/st2sco-project/frontend:master
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: st2sco
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 5173
